[project]
name = "example_package_hjerpe"
version = "0.0.1"
authors = [
    { name="Hjerpe", email="example_email@example.com" },
]
description = "A small example package"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
]

[project.urls]
Homepage = "https://github.com/pypa/sampleproject"
Issues = "https://github.com/python/sampleproject/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"